--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: either
 description: A Either package
-version: 0.0.1
-homepage:
+version: 0.0.2
+homepage: ""
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
